--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@expo-google-fonts/dm-serif-display": "^0.2.2",
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/poppins": "^0.2.2",
+    "@expo/vector-icons": "^13.0.0",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
+    "@unform/core": "^2.1.6",
+    "@unform/mobile": "^2.1.6",
     "expo": "^47.0.9",
     "expo-app-loading": "~2.1.1",
     "expo-font": "~11.0.1",
